--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,7 @@
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag(request.original_url + "  Orientacion Familiar una guia para el hogar / Home page", url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu Home page") %>
 
-<a href=""><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:" share-button ssb-icon") %></use></a>
-  <input class= "share-button ssb-icon" type="image" name="native_social_sharing_button" src="http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png" border="border of the image" alt="text">
-   
-
+<a href=""><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:" share-button ssb-icon") %></a>
 </div>
 </div>
 <div style = "margin-top = 45px">
