--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,7 @@
     <%= rails_social_share_button_tag(request.original_url + "  Orientacion Familiar una guia para el hogar / Home page", url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu Home page") %>
 
 <a href=""><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:" share-button ssb-icon") %></a>
+
 </div>
 </div>
 <div style = "margin-top = 45px">
@@ -188,7 +189,7 @@
     if (navigator.share) { 
      navigator.share({
         title: 'Orientacion Familiar una Guia para el Hogar',
-        url: '<%= request.original_url %>'
+        url: '<%= request.original_url %>' + ' TV,  Radio, Audios, Terapia Familiar y mas'
       }).then(() => {
         console.log('Thanks for sharing!');
       })
